--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "description": "A repo for boilerplate code for testing, deploying, and shipping chainlink solidity code.",
   "scripts": {
     "compile": "hardhat compile",
-    "test": "hardhat test test/unit/*.spec.js",
     "test-staging": "hardhat test test/staging/*.spec.js --network sepolia",
-    "deploy": "hardhat run scripts/deployment/main.js",
+    "deploy-local": "npx hardhat run scripts/deploy.js --network hardhat",
+    "deploy": "hardhat run scripts/deploy.js --network sepolia",
+    "run-local": "npx hardhat run scripts/run.js --network hardhat",
+    "test": "npx hardhat test --network hardhat ./test/test.js",
     "lint": "solhint 'contracts/*.sol'",
     "lint:fix": "solhint 'contracts/**/*.sol' --fix",
     "format": "prettier --write .",
@@ -23,6 +25,7 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@openzeppelin/contracts": "^4.9.3",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.3",
     "chai": "^4.3.6",
